# json_delta

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst  json_cat.1.rst  json_diff.1.rst  json_patch.1.rst
src/: json_cat  json_diff  json_patch
src/json_delta/: __init__.py  _diff.py  _patch.py  _udiff.py  _upatch.py  _util.py
src/ujson_delta/: __init__.py  _diff.py  _patch.py  _udiff.py  _upatch.py  _util.py
src/ujson_delta/cli/: json_cat.py  json_diff.py  json_patch.py
test/: Makefile  cases.json  diffs.json  local_binary_info.json  native_python_tests.sh  targets.json  test.py  test_jig.py
