[build-system]
requires = ["setuptools>=44", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ujson_delta"
authors = [{name = "Phil Roberts", email = "himself@phil-roberts.name"}]
license = {text = "BSD"}
description = "A diff/patch pair for JSON-serialized data structures."
keywords = ["JSON", "delta", "diff", "patch", "compression"]
readme = "README"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
]
dependencies = ["mujson"]
dynamic = ["version"]
requires-python = ">=3.2"

[project.urls]
Homepage = "https://json-delta.readthedocs.org/"
"Source Code" = "https://github.com/darthghandi/json_delta"

[project.scripts]
json_cat = "ujson_delta.cli.json_cat:main"
json_diff = "ujson_delta.cli.json_diff:main"
json_patch = "ujson_delta.cli.json_patch:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ujson_delta", "ujson_delta.cli"]
zip-safe = true

[tool.setuptools_scm]
