[metadata]
name = ujson_delta
author = Phil Roberts
author_email = himself@phil-roberts.name
license = BSD
description = A diff/patch pair for JSON-serialized data structures.
keywords = JSON, delta, diff, patch, compression
url = https://json-delta.readthedocs.org/
long_description = file: README
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[options]
package_dir =
     = src
packages = ujson_delta, ujson_delta.cli
python_requires >= 3.2
install_requires = mujson
zip_safe = True
test_suite = test.build_test_suite

[options.entry_points]
console_scripts =
    json_cat = ujson_delta.cli.json_cat:main
    json_diff = ujson_delta.cli.json_diff:main
    json_patch = ujson_delta.cli.json_patch:main
